package EchoNote.Jack;

public enum ActionStatus {
    OPEN,
    DONE
}
